--- a/AppComponents/app/src/main/res/layout/activity_main.xml
+++ b/AppComponents/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,6 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.gmd.lessons.MainActivity">
 
     <TextView
@@ -15,8 +11,8 @@
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:textSize="20sp"
+        android:textSize="30sp"
         android:textStyle="bold"
-        android:text="WIFI"
+        android:text="WIFI STATUS"
         android:id="@+id/vStatus"/>
 </RelativeLayout>
