--- a/FormSample/app/src/main/res/values/colors.xml
+++ b/FormSample/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="gmd">#FEBA31</color>
+
+    <color name="skyblue">#0090D7</color>
+    <color name="white">#FFFFFF</color>
 </resources>
