--- a/GMDAppTemplate/app/src/main/res/layout/activity_main.xml
+++ b/GMDAppTemplate/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.gmd.lessons.MainActivity">
+    tools:context="com.bx.android.lesson5.MainActivity">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:src="@mipmap/ic_logo_gmd"/>
-
+    <ListView
+        android:id="@+id/examplesList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
