recycler view example

--- a/GMDAppTemplate/app/src/main/res/values/arrays.xml
+++ b/GMDAppTemplate/app/src/main/res/values/arrays.xml
@@ -7,6 +7,7 @@
         <item>CursorAdapter</item>
         <item>ViewHolder</item>
         <item>Spinner</item>
+        <item>RecyclerView</item>
     </string-array>
 
     <string-array name="activities">
@@ -16,6 +17,7 @@
         <item>.cursoradapter.CursorAdapterActivity</item>
         <item>.viewholder.ViewHolderActivity</item>
         <item>.spinner.SpinnerActivity</item>
+        <item>.recyclerview.RecyclerViewActivity</item>
     </string-array>
 
     <string-array name="lorem">
