--- a/GMDAppTemplate/app/src/main/res/layout/activity_other.xml
+++ b/GMDAppTemplate/app/src/main/res/layout/activity_other.xml
@@ -10,4 +10,20 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.gmd.lessons.OtherActivity">
 
+    <FrameLayout
+        android:id="@+id/view"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+        android:background="@color/colorAccent" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/view"
+        android:layout_centerHorizontal="true"
+        android:background="?android:selectableItemBackground"
+        android:text="Muestra u Oculta!" />
+
 </RelativeLayout>
