--- a/GMDAppTemplate/app/src/main/res/layout/activity_palette.xml
+++ b/GMDAppTemplate/app/src/main/res/layout/activity_palette.xml
@@ -1,42 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/teamContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.gmd.lessons.MainActivity">
+    tools:context="com.gmd.lessons.PaletteActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/teamImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@mipmap/ic_logo_gmd" />
+        android:minWidth="200dp" />
 
-    <Button
-        android:id="@+id/button"
+    <TextView
+        android:id="@+id/teamName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imageView"
+        android:layout_below="@id/teamImage"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/ripple_drawable"
-        android:padding="10dp"
-        android:text="Clickeame!"
-        android:elevation="15dp"
-        android:textColor="@android:color/white" />
+        android:padding="5dp"
+        android:text="BARCELONA"
+        android:textSize="20sp" />
 
-    <Button
-        android:id="@+id/button2"
+    <TextView
+        android:id="@+id/teamCountry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/button"
+        android:layout_below="@id/teamName"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:background="?android:attr/selectableItemBackgroundBorderless"
-        android:text="Clickeame a mi también!" />
+        android:padding="5dp"
+        android:text="ESPAÑA"
+        android:textSize="20sp" />
 
 </RelativeLayout>
