--- a/GMDAppTemplate/app/src/main/res/layout/activity_main.xml
+++ b/GMDAppTemplate/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,16 @@
         android:src="@mipmap/ic_logo_gmd" />
 
     <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/imageView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:text="Hola" />
+
+    <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
